--- a/logseq/bak/pages/Learnable Programming/2023-03-10T15_06_23.623Z.Desktop.md
+++ b/logseq/bak/pages/Learnable Programming/2023-03-10T15_06_23.623Z.Desktop.md
@@ -1,6 +1,7 @@
 - An [interactive online essay](http://worrydream.com/LearnableProgramming/) by [Bret Victor](<[http://worrydream.com/LearnableProgramming/](http://worrydream.com/#!/Bio)>) about ... learnable programming
 - Victor's response to Khan
   id:: 63fe150f-e253-4a4b-921c-8ce09ac5c995
+  collapsed:: true
 	- **Programming is a way of thinking, not a rote skill.** Learning about "for" loops is not learning to program, any more than learning about pencils is learning to draw.
 	- **People understand what they can see.** If a programmer cannot see what a program is doing, she can't understand it.
 	- Thus, the goals of a programming system should be:
