what is programming, more bib, notes

--- a/pages/hls__parry2020_1677961910925_0.md
+++ b/pages/hls__parry2020_1677961910925_0.md
@@ -6,3 +6,20 @@ file-path:: ../assets/parry2020_1677961910925_0.pdf
   hl-page:: 1
   hl-color:: green
   id:: 6403abcf-a458-4e3c-b65e-64e7485084fd
+- Matching exercises are a tool widely implemented by teachers when learning the meaning and form of vocabulary in native and foreign languages [19, 46]. The purpose of this method is to match a word with its definition, and this is supposed to be particularly good for learning and reviewing the lexical semantics of vocabulary [12]. 
+  ls-type:: annotation
+  hl-page:: 2
+  hl-color:: green
+  id:: 6422d801-04a6-4424-bb58-993e6b433887
+  hl-stamp:: 1680005123634
+- Another receptive tool that is often used with children is colour coding words based on their grammatical class [55]. The use of colours and number of categories can be applied as the instructor chooses (e.g. nouns are blue, adjectives are red, prepositions are green). Using the same colour coding system throughout the teaching material is said to help learners make connections between words, identify patterns, pay more attention to the function of words, and ultimately remember grammatical rules [4].
+  ls-type:: annotation
+  hl-page:: 2
+  hl-color:: green
+  id:: 6422d82c-bce4-42c9-873d-5ae0b5a07221
+  hl-stamp:: 1680005167111
+- A type of activity that focuses more
+  ls-type:: annotation
+  hl-page:: 2
+  hl-color:: green
+  id:: 6422d93a-be38-4e61-9c17-3015e8384a02
