--- a/logseq/bak/pages/The House of Computing%3A Integrating Counternarratives into Computer Systems Education/2023-04-06T21_38_12.954Z.Desktop.md
+++ b/logseq/bak/pages/The House of Computing%3A Integrating Counternarratives into Computer Systems Education/2023-04-06T21_38_12.954Z.Desktop.md
@@ -4,7 +4,7 @@ tags:: bibliography
 - full paper: ![local copy](../assets/house-of-computing_1679057993697_0.pdf), [online](https://dl.acm.org/doi/pdf/10.1145/3478431.3499394)
 - **Notes:**
 	- "go make art"
-	- if this is the house, is the [[Rhetorics of Programming]] the neighborhood? #question
+	- if this is the house, the [[Rhetorics of Programming]] is the neighborhood
 - KIRDANI-RYAN, Mara; KO, Amy J. The House of Computing: Integrating Counternarratives into Computer Systems Education. In: *Proceedings of the 53rd ACM Technical Symposium on Computer Science Education V. 1*. 2022. p. 279-285.
 - ```
   @inproceedings{kirdani2022house,
