--- a/pages/hls__MWpostgrad_1682494878254_0.md
+++ b/pages/hls__MWpostgrad_1682494878254_0.md
@@ -17,3 +17,13 @@ file-path:: ../assets/MWpostgrad_1682494878254_0.pdf
   hl-color:: green
   id:: 6448db66-80ef-41c0-a41f-1917f3743a8e
   hl-stamp:: 1682496361685
+- This kind of ‘bare bones’ mathematics is useful for rough working or taking lecture notes, where writing speed is paramount. In such cases the work is not intended to be read by anyone else.
+  ls-type:: annotation
+  hl-page:: 11
+  hl-color:: green
+  id:: 64490b90-7858-49d5-be4d-b9aeeaffb9e4
+- Double indexed expressions such as xαi can often be avoided by reconsidering your original definitions.
+  ls-type:: annotation
+  hl-page:: 15
+  hl-color:: green
+  id:: 64490cf3-e06e-4ccb-b432-42ebe51eed2d
