connecting, de-koli

--- a/logseq/bak/pages/Category Theory___Seven Sketches___1. Generative effects%3A Orders and Galois connections/2023-05-15T16_08_40.704Z.Desktop.md
+++ b/logseq/bak/pages/Category Theory___Seven Sketches___1. Generative effects%3A Orders and Galois connections/2023-05-15T16_08_40.704Z.Desktop.md
@@ -8,14 +8,10 @@
 - ((64450432-7302-44da-a183-fbc003e44d6a))
 	- [[Heisenbug]], [[Sampling Error]], [[Generative Effects]], [[Selection Bias]]
 -
-- ## 1.1.1 A first look at [[Generative Effects]]
+- ## 1.1.1 A first look at generative effects
 - ((64450c60-e409-40c9-af33-2a4f425666a5))
 	- a sort of system (Object)
 	- a sort of observation ([[morphism]])
 	- a system-level operation that is not preserved by the observation (lost information/detail)
-- Alice's operation: $\phi = \begin{cases}  true & \text{ if   } • \leftrightarrow * \\ false & otherwise  \end{cases}$
-	- "lossy" when composed with $\lor$.  it can be that both composed functions have the same AliceValue, but their composition does not.
-- ((64623e13-d10d-4e90-8d34-76c1eb42d8c2))
-	- 21, 11->12->22->23->13
 -
 -
