--- a/pages/hls__7Sketches_1682244624369_0.md
+++ b/pages/hls__7Sketches_1682244624369_0.md
@@ -21,3 +21,10 @@ file-path:: ../assets/7Sketches_1682244624369_0.pdf
   hl-page:: 14
   hl-color:: green
   id:: 64450c60-e409-40c9-af33-2a4f425666a5
+- [:span]
+  ls-type:: annotation
+  hl-page:: 16
+  hl-color:: blue
+  id:: 64623e13-d10d-4e90-8d34-76c1eb42d8c2
+  hl-type:: area
+  hl-stamp:: 1684160017026
