--- a/logseq/bak/pages/STEM Diversity and Inclusion Efforts for Women of Color%3A A Critique of the New Labor System/2023-06-16T14_23_35.096Z.Desktop.md
+++ b/logseq/bak/pages/STEM Diversity and Inclusion Efforts for Women of Color%3A A Critique of the New Labor System/2023-06-16T14_23_35.096Z.Desktop.md
@@ -1,10 +1,8 @@
 tags:: bibliography
 
-- ## Abstract
-	- ((641a48f8-972f-4306-a563-7c93c86ea1cf))
-- ## Full Paper
-	- ![local copy](../assets/critique-of-the-new-labor-system_1679444008996_0.pdf), [online](https://genderandset.open.ac.uk/index.php/genderandset/article/view/646)
-- ## Notes
+- **Abstract:** ((641a48f8-972f-4306-a563-7c93c86ea1cf))
+- full paper: ![local copy](../assets/critique-of-the-new-labor-system_1679444008996_0.pdf), [online](https://genderandset.open.ac.uk/index.php/genderandset/article/view/646)
+- **Notes:**
 	- ((641a4b43-3ebd-485d-8eae-2273ea27e335))
 	- ((641a4c5f-6b87-4c78-8a69-699d8fa62fcb))
 	- [[Social Dreaming Together – Envisioning Decolonised Computer Science Education]]
@@ -16,17 +14,16 @@ tags:: bibliography
 		- ((6418f99c-111f-4e66-8cfc-1377598323b1))
 	- [[Means of Instruction]]
 	- ((641a5026-8b3d-4e5b-9094-70260f7f3023))
-- ## Cite Me
-	- SCOTT, Kimberly A.; ELLIOTT, Steve. STEM diversity and inclusion efforts for women of color: A critique of the new labor system. *International Journal of Gender, Science and Technology*, 2019, 11.3: 374-382.
-	- ```
-	  @article{scott2019stem,
-	    title={STEM diversity and inclusion efforts for women of color: A critique of the new labor system},
-	    author={Scott, Kimberly A and Elliott, Steve},
-	    journal={International Journal of Gender, Science and Technology},
-	    volume={11},
-	    number={3},
-	    pages={374--382},
-	    year={2019}
-	  }
-	  ```
-		-
+- SCOTT, Kimberly A.; ELLIOTT, Steve. STEM diversity and inclusion efforts for women of color: A critique of the new labor system. *International Journal of Gender, Science and Technology*, 2019, 11.3: 374-382.
+- ```
+  @article{scott2019stem,
+    title={STEM diversity and inclusion efforts for women of color: A critique of the new labor system},
+    author={Scott, Kimberly A and Elliott, Steve},
+    journal={International Journal of Gender, Science and Technology},
+    volume={11},
+    number={3},
+    pages={374--382},
+    year={2019}
+  }
+  ```
+	-
