--- a/logseq/bak/pages/rhetorical { code } studies %3A discovering.arguments in.and.around.code/2023-06-16T14_23_35.113Z.Desktop.md
+++ b/logseq/bak/pages/rhetorical { code } studies %3A discovering.arguments in.and.around.code/2023-06-16T14_23_35.113Z.Desktop.md
@@ -1,7 +1,6 @@
 tags:: bibliography, reference
 
-- ## Full Book
-	- ![local copy](../assets/rhetorical-code-studies_1684845634231_0.pdf), [online](https://library.oapen.org/bitstream/id/bd197f2f-4411-445e-a7e5-9f89c41fc21a/1006145.pdf)
+- full book: ![local copy](../assets/rhetorical-code-studies_1684845634231_0.pdf), [online](https://library.oapen.org/bitstream/id/bd197f2f-4411-445e-a7e5-9f89c41fc21a/1006145.pdf)
 - **Notes:**
 	- [[Rhetorics of Programming]], [[Rhetorics-First Introductory Sequence]], [[Rhetorics-First Curriculum Design]]
 	- ((646db39d-ae33-4307-abf9-cfda6dd93bbd)) ((646db3c7-b661-42c7-ab24-6e6e76f3d170))
